Fixed overlapping dates

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ div#timeline_container > ul:after {
 div#timeline_container > ul > li {
 	position:relative;
 	padding:.3em 0;
-	min-height:700px;
+	min-height:730px;
 	text-align: center;
 	cursor:pointer;
 	-webkit-transition:all 0.3s ease-out;
